fixes img stretching div container

--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,21 @@
 }
 
 body {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 15% 83% 2%;
+    grid-template-rows: 12% 88%;
     background: linear-gradient(100deg, rgba(0,0,0,1) 30%, rgb(83, 83, 83) 70%, rgb(168, 168, 168) 100%);
     color: white;
+    overflow: hidden;
 }
 
 header {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
     text-align: center;
+    height: 5rem;
 }
 
 h1 {
@@ -31,6 +36,7 @@ section {
     grid-row: 2 / 4;
     grid-column: 2;
     text-align: center;
+    padding: 1rem 2rem 3rem 2rem;
 }
 
 aside {
@@ -39,7 +45,7 @@ aside {
     text-align: left;
     grid-row: 2 / 4;
     padding-inline-start: 15px;
-    padding-top: 90px;
+    margin-right: 3rem;
 }
 
 ul {
@@ -51,11 +57,11 @@ li {
     padding: 15px;
 }
 
-img {
+.container > img {
     grid-column: span 1;
     grid-row: span 1;
-    width: 100%;
-    height: 100%;
+    max-width: 100rem;
+    max-height: 100rem;
 }
 
 #dialogue {
@@ -66,9 +72,10 @@ img {
 .container {
     grid-column: span 1;
     grid-row: span 1;
-    width: 80%;
-    height: 70%;
+    max-width: 10rem;
+    max-height: 8rem;
     border: 3px solid white;
+    overflow: hidden;
 }
 
 .hide {
@@ -80,8 +87,9 @@ img {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-gap: 1%;
-    margin: 20px;
+    margin: 1rem;
     justify-content: center;
+    padding-inline-start: 4rem;
 }
 
 .gallery20 {
@@ -89,15 +97,16 @@ img {
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-gap: 1%;
-    margin: 20px;
+    margin: 1rem;
     justify-content: center;
+    padding-inline-start: 2rem;
 }
 
 .gallery24 {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    grid-gap: 1%;
-    margin: 20px;
+    grid-gap: 1.5%;
+    margin: 1rem;
     justify-content: center;
 }
